fix gap between social buttons

--- a/style.css
+++ b/style.css
@@ -203,6 +203,7 @@ section {
     display: flex;
     justify-content: center;
     margin-top: 1rem;
+    gap: 1rem;
 }
 
 /* ICONs */
